--- a/index.html
+++ b/index.html
@@ -7,43 +7,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Título que aparece en la pestaña del navegador -->
     <title>Login - Gimnasio</title>
-    <!-- Enlace a la hoja de estilos Bootstrap CDN para estilos predefinidos -->
+    <!-- Enlace a la hoja de estilos Bootstrap para estilos predefinidos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Enlace a los estilos personalizados -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <!-- Contenedor principal que centra el contenido vertical y horizontalmente usando clases de Bootstrap -->
+    <!-- Contenedor principal que centra vertical y horizontalmente el contenido -->
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
-        <!-- Tarjeta que contiene el formulario de login con padding y sombra -->
+        <!-- Tarjeta con sombra que contiene el formulario -->
         <div class="card p-4 shadow-lg" style="width: 25rem;">
             <!-- Logo del gimnasio -->
-            <img src="assets/12.png" alt="Logo del Gimnasio" class="login-logo">
-            <!-- Título de bienvenida centrado -->
+            <img src="assets/12.png" alt="Logo del Gimnasio" class="login-logo mb-3">
+            
+            <!-- Título centrado -->
             <h2 class="text-center mb-4">Bienvenido al Gimnasio</h2>
 
             <!-- Formulario de inicio de sesión -->
             <form id="loginForm" class="mb-3">
-                <!-- Campo para ingresar correo electrónico -->
+                <!-- Campo: Correo -->
                 <div class="mb-3">
                     <label for="loginEmail" class="form-label">Correo Electrónico</label>
                     <input type="email" class="form-control" id="loginEmail" required>
                 </div>
-                <!-- Campo para ingresar la contraseña -->
+                <!-- Campo: Contraseña -->
                 <div class="mb-3">
                     <label for="loginPassword" class="form-label">Contraseña</label>
                     <input type="password" class="form-control" id="loginPassword" required>
                 </div>
-                <!-- Botón para enviar el formulario -->
+                <!-- Botón: Iniciar sesión -->
                 <button type="submit" class="btn btn-primary w-100">Iniciar Sesión</button>
             </form>
+
+            <!-- Enlace al registro (opcional) -->
+            <p class="text-center">¿No tienes cuenta? <a href="register.html">Regístrate aquí</a></p>
         </div>
     </div>
 
-    <!-- Scripts necesarios para el funcionamiento de Bootstrap -->
+    <!-- Script de Bootstrap para funcionalidad de UI -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Script personalizado para funcionalidades propias -->
+    <!-- Script personalizado con la lógica de login -->
     <script src="js/main.js"></script>
 </body>
 </html>
-
